--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,8 @@
     "discord.js": "^14.10.2",
     "dotenv": "^16.0.3",
     "finn-jobb": "^1.0.7",
-    "node-fetch": "^2.6.9"
+    "node-fetch": "^2.6.9",
+    "node-schedule": "^2.1.1"
   },
   "devDependencies": {
     "eslint": "^8.39.0"
